fix: bug in statistics
